--- a/index.html
+++ b/index.html
@@ -94,6 +94,12 @@
             <div class="cert6">
 
             </div>
+            <div class="cert7">
+
+            </div>
+            <div class="cert8">
+
+            </div>
         </div>
     </div>
     <div id="ach">
@@ -103,7 +109,7 @@
                 <div class="timeline-icon red"></div>
                 <div class="intern">
                     <h2>Internships: </h2>
-                    <p>Till now I have done 4 Internship/Tranning which includes big companies like Celebal Technology and LNMIIT, Jaipur also includes the companies like Bussibees and SINCGRID.</p>
+                    <p>Till now I have done 4 Internship/Tranning which includes big companies like <a href="https://celebaltech.com/">Celebal Technology</a> and <a href="https://lnmiit.ac.in/">LNMIIT, Jaipur</a> also includes the companies like <a href="https://bussibees.com/">Bussibees</a> and <a href="https://store.sincgrid.com/">SINCGRID.</a></p>
                 </div>
             </div>
             <div class="timeline-item">
@@ -118,7 +124,7 @@
                 <div class="timeline-icon blue"></div>
                 <div class="acad">
                     <h2>Academics: </h2>
-                    <p>Go trought a very good acadmeic years in both school and college.In school I have achived 1st rank in 12th standard in the Science course and in College got a good cgpa in 1st semester of 8.98 and continuing same in 2nd semester.</p>
+                    <p>Gone through a very good acadmeic years in both school and college.In school I have achived 1st rank in 12th standard in the Science course and in College got a good cgpa in 1st semester of 8.98 and continuing same in 2nd semester.</p>
                 </div>
             </div>
         </div>
